# dcolor

./: .coverage  .editconfig  .gitignore  README.md  setup.cfg  setup.py
dcolor/: __init__.py  _dcolor.py  attr.py  cm.py  color.py  index.py  mode.py  name.py  rgb.py  where.py
dcolour/: ._dcolour.py.swp  .cm.py.swp  .colour.py.swp  .index.py.swp  .name.py.swp  .rgb.py.swp  .where.py.swp  __init__.py  _dcolour.py  cm.py  colour.py  deco.py  index.py  mode.py  name.py  rgb.py  where.py
tests/: test_attr.py  test_cm.py  test_color.py  test_colour.py  test_dcolor.py  test_dcolour.py  test_deco.py  test_index.py  test_mode.py  test_name.py  test_rgb.py  test_where.py
