[metadata]
name = dcolor
description = decorate string library
long_description_content_type = text/markdown
long_description = file: README.md
author = tatsuya.S
url = https://github.com/tatsuya4649/dcolor
license_files = file: LICENSE
classifiers = 
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License

[options]
zip_safe = False
include_package_data = True
packages: find:

[options.packages.find]
exclude = tests
